--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
@@ -53,33 +53,56 @@
   </header>
 
   <body>
-    <!-- Spacing  -->
-    <br> <br> <br> <br> <br> <br>
-    <hr>
-    <h1 style="text-align: center"> When Tangent replaces your Chinese Drywall... </h1>
+    <h1 style="text-align: center"> Chinese Drywall </h1>
     <hr>
 
-    <div id="removal">
-      <h4> We handle the removal of bad drywall.. </h4>
+    <div>
+      <h4> What is Chinese Drywall? </h4>
+      <p>
+        Chinese Drywall is about the smell rather than the look, it smells of rotten eggs.
+      </p>
+    </div>
+
+    <div>
+      <h4> How do you know if you have Chinese Drywall? </h4>
+      <p>
+        Chinese Drywall is about the smell rather than the look, it smells of rotten eggs.
+      </p>
+    </div>
+
+
+    <br> <br>
+    <h1 style="text-align: center"> If you hire Tangent to replace your Chinese Drywall... </h1>
+    <hr>
+
+    <div>
+      <h4> We handle the removal of bad drywall... </h4>
       <p>
       </p>
     </div>
 
-    <div id="cleaning">
-      <h4> We handle the cleaning (HEPA clean).. </h4>
+    <div>
+      <h4> We handle the HEPA cleaning... </h4>
       <p>
       </p>
     </div>
 
-    <div id="replacement">
-      <h4> We handle the drywall replacement.. </h4>
+    <div>
+      <h4> We handle the drywall replacement... </h4>
       <h5> Hang </h5>
       <h5> finish </h5>
       <h5> texture </h5>
       <p>
       </p>
-    </div>
 
+      <div>
+        <h4> And last we paint the walls. </h4>
+        <p>
+        </p>
+      </div>
+
+
+    </div>
 
 
     <footer class="FooterInfo">
