--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
@@ -56,11 +56,12 @@
     <br> <br> <br> <br> <br> <br>
     <hr>
 
-    <h1> Want to contact Tangent Construction for potential work? </h1>
+    <h1 style="text-align: center"> Want to contact Tangent Construction for potential work? </h1>
+    <hr>
     <h4>
-      <br> <br>
+      <br>
       <!-- Office hours are-  Monday - Thursday: 9:00 - 3:30. Friday - 9:00 - 1:00. Saturday - Sunday: closed. -->
-      Office hours - <br>
+      <span style="font-weight: bold"> Office hours - </span> <br>
       Monday: 9:00 - 3:30 <br>
       Tuesday: 9:00 - 3:30 <br>
       Wednesday: 9:00 - 3:30 <br>
@@ -70,12 +71,13 @@
       Sunday: closed <br>
       Closed holidays<br> <br>
 
-      Phone: <br>
+      <span style="font-weight: bold"> Phone: </span> <br>
       (813) 628-4411 <br> <br>
 
-      email: <br>
-      <a style="color: black" href="mailto:info@tangentconstructionservices.com"> info@tangentconstructionservices.com </a> <br> <br>
-      Location: <br>
+      <span style="font-weight: bold"> email: </span> <br>
+      <a style="color: maroon; text-decoration: underline" href="mailto:info@tangentconstructionservices.com"> info@tangentconstructionservices.com </a> <br> <br>
+
+      <span style="font-weight: bold"> Location: </span> <br>
       4514 Oak Fair Boulevard, Suite 150<br>
       Tampa, Florida 33610<br> <br>
     </h4>
