--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
@@ -56,12 +56,12 @@
   <body>
     <!-- Spacing  -->
     <br> <br> <br> <br> <br> <br>
-    <hr>
+    <br>
     <h1 style="text-align: center"> A Tangent worthy job for new construction... </h1>
     <hr>
 
     <div id="stucco" class='col-lg-12'>
-      <h4 style="text-align: center"> We handle stucco.. </h4>
+      <h4 style="text-align: center"> We handle stucco... </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -71,9 +71,10 @@
     </div>
 
 
+
     <div id="foam" class=col-lg-12>
-      <hr>
-      <h4 style="text-align: center"> We handle architectural foam.. </h4>
+      <hr style="border-top: 1px solid #333;">
+      <h4 style="text-align: center"> We handle architectural foam... </h4>
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheFoam.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
@@ -85,7 +86,7 @@
 
     <div id="stone" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle architectural stone.. </h4>
+      <h4 style="text-align: center"> We handle architectural stone... </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -96,13 +97,26 @@
 
     <div id="painting" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle painting.. </h4>
+      <h4 style="text-align: center"> We handle painting... </h4>
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
+    </div>
+
+
+    <div id="soffit" class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We handle aluminum soffit... </h4>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Soffit.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+
     </div>
 
 
