--- a/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
+++ b/TangentConstruction/TangentConstruction New Site/SealAndPaint.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
@@ -53,15 +53,12 @@
   </header>
 
   <body>
-    <br> <br> <br> <br> <br> <br>
-    <hr>
-    <h1 style="text-align: center"> A Tangent worthy job... </h1>
-    <hr>
+
 
 
 
     <!-- This is for Residential  -->
-    <br>
+    <!-- <br>
     <br>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
       <ol class="carousel-indicators">
@@ -88,11 +85,12 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div> -->
 
-    <h3>
+    <h2 style="text-align: center">
       A cheaper option for less damaged stucco is to seal and repaint it.
-    </h3>
+      <hr>
+    </h2>
 
     <div id="stucco" class='col-lg-12'>
       <h4 style="text-align: center"> We seal the cracks.. </h4>
