--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-md-1"> </div>
 
@@ -55,7 +55,7 @@
   <body>
 
     <h2 style="text-align: center"> What is stucco remediation? </h2>
-    <hr>
+    <br>
     <p>
       Stucco remediation is when we come out to fix damaged stucco. If your stucco is broken, buckling, or cracked, water can get in.
 
@@ -149,10 +149,11 @@
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
+    <!-- <h3 style="text-align:center"> OR </h3> -->
 
     <div class="col-md-6">
       <h4 style="text-align:center">
-        Seal and repaint
+        Option 1. Seal and repaint
       </h4>
       <!-- <p class='col-md-8'> -->
       Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
@@ -167,7 +168,7 @@
 
     <div class="col-md-6">
       <h4 style="text-align:center">
-        Tear off and re-stucco
+        Option 2. Tear off and re-stucco
       </h4>
       <!-- <p class='col-md-8'> -->
       Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
