--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
@@ -55,6 +55,9 @@
   <body>
 
     <h2 style="text-align: center"> Welcome to Tangent Construction Services </h2> <br>
+
+    <img src="../EmailedPictures/Ruler.jpg" width="300" height="250" class="center" alt="Photo of a Ruler">
+
     <p>
       We are a family owned construction company that focuses on Stucco Remediation, New Construction, and Chinese Drywall.
       We have been in buisness for more than a decade.
