--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -19,7 +19,7 @@
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
       <!-- spacing -->
-      <hr>
+      <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
 
@@ -53,11 +53,11 @@
   </header>
 
   <body>
-    <h1 style="text-align: center"> A Tangent worthy job... </h1>
+    <h2 style="text-align: center"> When you hire Tangent to re-stucco your house... </h2>
     <hr>
 
     <div id="stucco" class='col-lg-12'>
-      <h4 style="text-align: center"> We handle stucco.. </h4>
+      <h4 style="text-align: center"> We handle the stucco... </h4>
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
@@ -69,7 +69,7 @@
 
     <div id="painting" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle painting.. </h4>
+      <h4 style="text-align: center"> We handle the painting... </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -81,7 +81,7 @@
 
     <div id="soffit" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle aluminum soffit.. </h4>
+      <h4 style="text-align: center"> We handle the aluminum soffit... </h4>
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Soffit.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
@@ -93,7 +93,7 @@
 
     <div id="screen enclosure" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle screen enclosures.. </h4>
+      <h4 style="text-align: center"> We handle the screen enclosures... </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -183,12 +183,12 @@
     </div>
 
     <!-- spacer -->
-    <div class="col-lg-12">
+    <!-- <div class="col-lg-12">
       <hr>
-    </div>
+    </div> -->
 
     <!-- This is for multi-Family  -->
-    <br>
+    <!-- <br>
     <br>
     <div id="carouselEnclosure" class="carousel slide offset-md-2" data-ride="carousel" style="width: 800px; text-align:center; align-content: center;">
       <ol class="carousel-indicators">
@@ -219,7 +219,7 @@
 
 
     <!-- This is for Residential  -->
-    <br>
+    <!-- <br>
     <br>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
       <ol class="carousel-indicators">
@@ -246,7 +246,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div> -->
 
     <footer class="FooterInfo">
     </footer>
