--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -124,6 +124,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -159,6 +161,14 @@
             <!-- Control joints are used for segmenting stucco if it cracks. -->
           </div>
         </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/ChuckPics/ControlJointsCropped.jpg" width="150" height="550" alt="Sixth slide">
+          <div class="carousel-caption">
+            <h3>Control joins are used to stop any cracks from spreading across the whole house.</h3>
+          </div>
+        </div>
+
         <div class="carousel-item">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="150" height="550" alt="Sixth slide">
           <div class="carousel-caption">
@@ -171,6 +181,10 @@
             <h3>Last, the house is caulked and painted.</h3>
           </div>
         </div>
+
+
+
+
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
