aligned text on all pages
all text pages have text areas wrapped in a 'col' div so that it centers with navbar.

--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -56,14 +56,14 @@
     <h1 style="text-align: center"> Chinese Drywall </h1>
     <hr>
 
-    <div>
+    <div class="col-sm-12">
       <h4> What is Chinese Drywall? </h4>
       <p>
         Chinese Drywall is about the smell rather than the look, it smells of rotten eggs.
       </p>
     </div>
 
-    <div>
+    <div class="col-sm-12">
       <h4> How do you know if you have Chinese Drywall? </h4>
       <p>
         Chinese Drywall is about the smell rather than the look, it smells of rotten eggs.
@@ -75,19 +75,19 @@
     <h1 style="text-align: center"> If you hire Tangent to replace your Chinese Drywall... </h1>
     <hr>
 
-    <div>
+    <div class="col-sm-12">
       <h4> We handle the removal of bad drywall... </h4>
       <p>
       </p>
     </div>
 
-    <div>
+    <div class="col-sm-12">
       <h4> We handle the HEPA cleaning... </h4>
       <p>
       </p>
     </div>
 
-    <div>
+    <div class="col-sm-12">
       <h4> We handle the drywall replacement... </h4>
       <h5> Hang </h5>
       <h5> finish </h5>
