--- a/TangentConstruction/TangentConstruction New Site/ContactUs.html
+++ b/TangentConstruction/TangentConstruction New Site/ContactUs.html
@@ -53,33 +53,38 @@
   </header>
 
   <body>
-    <br> <br> <br> <br> <br> <br>
-    <hr>
-
     <h1 style="text-align: center"> Want to contact Tangent Construction for potential work? </h1>
     <hr>
     <h4>
       <br>
       <!-- Office hours are-  Monday - Thursday: 9:00 - 3:30. Friday - 9:00 - 1:00. Saturday - Sunday: closed. -->
-      <span style="font-weight: bold"> Office hours - </span> <br>
-      Monday: 9:00 - 3:30 <br>
-      Tuesday: 9:00 - 3:30 <br>
-      Wednesday: 9:00 - 3:30 <br>
-      Thursday: 9:00 - 3:30 <br>
-      Friday: 9:00 - 3:30 <br>
-      Saturday: closed <br>
-      Sunday: closed <br>
-      Closed holidays<br> <br>
+      <div class="col-sm-12">
+        <span style="font-weight: bold"> Office hours - </span> <br>
+        Monday: 9:00 - 3:30 <br>
+        Tuesday: 9:00 - 3:30 <br>
+        Wednesday: 9:00 - 3:30 <br>
+        Thursday: 9:00 - 3:30 <br>
+        Friday: 9:00 - 3:30 <br>
+        Saturday: closed <br>
+        Sunday: closed <br>
+        Closed holidays<br> <br>
+      </div>
 
-      <span style="font-weight: bold"> Phone: </span> <br>
-      (813) 628-4411 <br> <br>
+      <div class="col-sm-12">
+        <span style="font-weight: bold"> Phone: </span> <br>
+        (813) 628-4411 <br> <br>
+      </div>
 
-      <span style="font-weight: bold"> email: </span> <br>
-      <a style="color: maroon; text-decoration: underline" href="mailto:info@tangentconstructionservices.com"> info@tangentconstructionservices.com </a> <br> <br>
+      <div class="col-sm-12">
+        <span style="font-weight: bold"> email: </span> <br>
+        <a style="color: maroon; text-decoration: underline" href="mailto:info@tangentconstructionservices.com"> info@tangentconstructionservices.com </a> <br> <br>
+      </div>
 
-      <span style="font-weight: bold"> Location: </span> <br>
-      4514 Oak Fair Boulevard, Suite 150<br>
-      Tampa, Florida 33610<br> <br>
+      <div class="col-sm-12">
+        <span style="font-weight: bold"> Location: </span> <br>
+        4514 Oak Fair Boulevard, Suite 150<br>
+        Tampa, Florida 33610<br> <br>
+      </div>
     </h4>
 
     <footer class="FooterInfo">
