--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -56,12 +56,14 @@
 
     <h2 style="text-align: center"> What is stucco remediation? </h2>
     <br>
-    <p>
-      Stucco remediation is when we come out to fix damaged stucco. If your stucco is broken, buckling, or cracked, water can get in.
+    <div class="col-sm-12">
+      <p>
+        Stucco remediation is when we come out to fix damaged stucco. If your stucco is broken, buckling, or cracked, water can get in.
 
-      Stucco remediation is when we come out to fix damaged stucco. We do this in one of two ways. First, if it is lightly damaged, we can do a seal and paint.
-      Second option is for more damaged stucco, we come out and
-    </p>
+        Stucco remediation is when we come out to fix damaged stucco. We do this in one of two ways. First, if it is lightly damaged, we can do a seal and paint.
+        Second option is for more damaged stucco, we come out and
+      </p>
+    </div>
 
     <br>
 
