changed all the headers in stuccos
replaced headers for re-stucco, and new construction.  It better fits the flow now.

--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -54,28 +54,46 @@
   </header>
 
   <body>
-    <!-- Spacing  -->
-    <br> <br> <br> <br> <br> <br>
-    <br>
     <h1 style="text-align: center"> A Tangent worthy job for new construction... </h1>
     <hr>
 
-    <div id="stucco" class='col-lg-12'>
-      <h4 style="text-align: center"> We handle stucco... </h4>
+    <div class='col-lg-12'>
+      <h4 style="text-align: center"> We put up the Tyvek. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Tyvek.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+    <div class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We hang the wire lathe and control joints. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/ChuckPics/ControlJointsCropped.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
     </div>
 
 
+    <div class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We apply two layers of stucco. </h4>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/ScratchCoat.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
 
     <div id="foam" class=col-lg-12>
       <hr style="border-top: 1px solid #333;">
-      <h4 style="text-align: center"> We handle architectural foam... </h4>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheFoam.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <h4 style="text-align: center"> Upon request we can add architectural foam. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheFoam.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -86,19 +104,19 @@
 
     <div id="stone" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle architectural stone... </h4>
+      <h4 style="text-align: center"> Upon request we can also add architectural stone. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheStone.jpg" width=" 250" height="200" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheStone.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
     </div>
 
     <div id="painting" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle painting... </h4>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
+      <h4 style="text-align: center"> We paint the cured stucco and any decorations on it. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style="height: px300 width: px300;"> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -109,7 +127,7 @@
 
     <div id="soffit" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle aluminum soffit... </h4>
+      <h4 style="text-align: center"> We add and paint the aluminum soffit. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
