--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -56,9 +56,9 @@
     <h2 style="text-align: center"> When you hire Tangent to re-stucco your house... </h2>
     <hr>
 
-    <div id="stucco" class='col-lg-12'>
-      <h4 style="text-align: center"> We handle the stucco... </h4>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    <div class='col-lg-12'>
+      <h4 style="text-align: center"> We tear off the defective stucco. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Demo.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -66,10 +66,57 @@
       </p>
     </div>
 
-
-    <div id="painting" class='col-lg-12'>
+    <div class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle the painting... </h4>
+      <h4 style="text-align: center"> We fix the damaged framing. </h4>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/FrameRepairs.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+
+    <div class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We put up the Tyvek. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Tyvek.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+    </div>
+
+    <div class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We hang the wire lathe and control joints. </h4>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/ChuckPics/ControlJointsCropped.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+
+    <div class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We apply two layers of stucco. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/ScratchCoat.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+    </div>
+
+    <!-- // we replace any decorations that were on the stucco. -->
+
+    <div class='col-lg-12'>
+      <hr>
+      <h4 style="text-align: center"> We replace the decorations and then paint the cured stucco. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -79,10 +126,10 @@
     </div>
 
 
-    <div id="soffit" class='col-lg-12'>
+    <div class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle the aluminum soffit... </h4>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Soffit.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <h4 style="text-align: center"> We add and paint the aluminum soffit. </h4>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Soffit.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -93,13 +140,13 @@
 
     <div id="screen enclosure" class='col-lg-12'>
       <hr>
-      <h4 style="text-align: center"> We handle the screen enclosures... </h4>
+      <h4 style="text-align: center"> What about screen enclosures? </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Pool Covering/ScreenEnclosureProtected.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Pool Covering/ScreenEnclosureProtected.jpg" width="300" height="250" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
     <!-- spacer -->
