--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -56,7 +56,33 @@
 
     <h2 style="text-align: center"> Welcome to Tangent Construction Services </h2> <br>
 
-    <img src="../EmailedPictures/Pictures for Kyle/House 1/WireLathe.jpg" width="300" height="250" class="center" alt="Photo of a Ruler">
+    <div id="carouselHomeCollage" class="carousel slide center" data-ride="carousel" style="width: 600px; text-align:center; align-content: center;">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselHomeCollage" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselHomeCollage" data-slide-to="1"></li>
+        <li data-target="#carouselHomeCollage" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="../EmailedPictures/ChuckPics/HardHatsCropped.jpg" style="width: 600px; height: 425px" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/ChuckPics/DemoCropped.jpg" style="width: 600px; height: 425px" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/StuccoRemediation/Painting.jpg" style="width: 600px; height: 425px" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselHomeCollage" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselHomeCollage" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <!-- <img src="../EmailedPictures/Pictures for Kyle/House 1/WireLathe.jpg" width="300" height="250" class="center" alt="Photo of a Ruler"> -->
     <br>
 
     <div class="col-sm-12">
@@ -82,11 +108,11 @@
       What are others saying about Tangent Construction Services?
     </h2>
     <!-- text-align:center; align-content: center; -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="height:300px">
+    <div id="carouselTestimonials" class="carousel slide" data-ride="carousel" style="height:300px">
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselTestimonials" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselTestimonials" data-slide-to="1"></li>
+        <li data-target="#carouselTestimonials" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -138,11 +164,11 @@
           </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselTestimonials" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselTestimonials" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
