cleaned up code everywhere, added text to drywall
combed through code deleting old comments and code no longer going to be used.  Added filler to the drywall page so it looks filled in.

--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -1,6 +1,5 @@
 <!doctype html>
 
-
 <html>
 <div class="pageContent container">
   <header>
@@ -12,13 +11,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <h1>
-      <!-- Tangent Construction Services - Stucco -->
-    </h1>
+    <!-- Logo -->
+    <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
-      <!-- spacing -->
       <br>
       <div class="navbar">
         <div class="col-md-1"> </div>
@@ -53,9 +50,7 @@
   </header>
 
   <body>
-
     <h2 style="text-align: center"> What is stucco remediation? </h2>
-    <br>
     <div class="col-sm-12">
       <p>
         Stucco remediation is when we come out to fix damaged stucco. If your stucco is broken, buckling, or cracked, water can get in.
@@ -65,21 +60,21 @@
       </p>
     </div>
 
-    <br>
+    <!-- This spaces out the 'inline' elements below -->
+    <div class="col-lg-12">
+      <br>
+    </div>
 
     <div class="col-lg-12">
-      <!-- <div> -->
       <h3 style="display: inline">
         How do you know if you need it?
       </h3>
 
-      <!-- </div> -->
-      <!-- <div class="image col-md-6"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div> -->
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: 450px; text-align:center; display: inline; align-content: center; float: right">
+      <div id="carouselBadStucco" class="carousel slide" data-ride="carousel" style="width: 450px; text-align:center; display: inline; align-content: center; float: right">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselBadStucco" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselBadStucco" data-slide-to="1"></li>
+          <li data-target="#carouselBadStucco" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -92,11 +87,11 @@
             <img class="d-block w-100" src="../EmailedPictures/ChuckPics/StuccoBuckleing (2).jpg" width="250" height="300" alt=" Third slide">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselBadStucco" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselBadStucco" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -108,7 +103,6 @@
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
         Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
-
     </div>
 
 
@@ -151,20 +145,15 @@
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
     </div>
 
-    <!-- <h3 style="text-align:center"> OR </h3> -->
-
     <div class="col-md-6">
       <h4 style="text-align:center">
         Option 1. Seal and repaint
       </h4>
-      <!-- <p class='col-md-8'> -->
       Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
       topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
       Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       <br>
       Click <a style="text-decoration:underline" href="SealAndPaint.html"> here </a> to go to the Seal and Repaint page.
-      <!-- </p> -->
-      <!-- <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div> -->
     </div>
 
 
@@ -172,16 +161,12 @@
       <h4 style="text-align:center">
         Option 2. Tear off and re-stucco
       </h4>
-      <!-- <p class='col-md-8'> -->
       Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
       topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
       Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       <br>
       Click <a style="text-decoration:underline" href="StuccoRemediation.html"> here </a> to go to the re-stucco page.
-      <!-- </p> -->
-      <!-- <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div> -->
     </div>
-
 
 
     <footer class="FooterInfo">
