--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -1,6 +1,5 @@
 <!doctype html>
 
-
 <html>
 <div class="pageContent container" style="overflow: auto">
   <header>
@@ -12,13 +11,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <h1>
-      <!-- old header -->
-    </h1>
+    <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
-      <!-- spacing -->
       <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
@@ -53,9 +49,9 @@
   </header>
 
   <body>
-
     <h2 style="text-align: center"> Welcome to Tangent Construction Services </h2> <br>
 
+    <!-- A courousel collage of random Tangent pictures -->
     <div id="carouselHomeCollage" class="carousel slide center" data-ride="carousel" style="width: 600px; text-align:center; align-content: center;">
       <ol class="carousel-indicators">
         <li data-target="#carouselHomeCollage" data-slide-to="0" class="active"></li>
@@ -82,7 +78,6 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <!-- <img src="../EmailedPictures/Pictures for Kyle/House 1/WireLathe.jpg" width="300" height="250" class="center" alt="Photo of a Ruler"> -->
     <br>
 
     <div class="col-sm-12">
@@ -107,17 +102,15 @@
     <h2 style="text-align:center">
       What are others saying about Tangent Construction Services?
     </h2>
-    <!-- text-align:center; align-content: center; -->
     <div id="carouselTestimonials" class="carousel slide" data-ride="carousel" style="height:300px">
       <ol class="carousel-indicators">
         <li data-target="#carouselTestimonials" data-slide-to="0" class="active"></li>
         <li data-target="#carouselTestimonials" data-slide-to="1"></li>
-        <li data-target="#carouselTestimonials" data-slide-to="2"></li>
+        <!-- commented out until 3rd Testimonial -->
+        <!-- <li data-target="#carouselTestimonials" data-slide-to="2"></li> -->
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <!-- <img class="d-block w-100" src="..." alt="First slide"> -->
-          <!-- <p> others think that we are really teally cool </p> -->
           <div class="col-sm-10 col-sm-offset-1">
             <p>
               <br>
@@ -155,14 +148,15 @@
             </p>
           </div>
         </div>
-        <div class="carousel-item">
+        <!-- Saving for 3rd testimonial -->
+        <!-- <div class="carousel-item">
           <div class="col-sm-10 col-sm-offset-1">
             <p>
               <br>
               take their word for it.
             </p>
           </div>
-        </div>
+        </div> -->
       </div>
       <a class="carousel-control-prev" href="#carouselTestimonials" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -183,21 +177,6 @@
     <script src="../js/popper.min.js"> </script>
     <script src="../js/bootstrap.js"> </script>
     <script src="../js/tangentJS.js"> </script>
-
-
-    <!-- <script>
-      const myFooter = document.getElementById('FooterInfo');
-      const footerFragment = document.createDocumentFragment();
-
-      let item1 = document.createElement('li');
-      let line = document.createElement('<hr>');
-
-      item1.textContent = 'Kyle  <hr>';
-
-      footerFragment.appendChild(item1);
-      // footerFragment.appendChild(line);
-      FooterInfo.appendChild(footerFragment)
-    </script> -->
   </body>
 </div>
 
