--- a/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
+++ b/TangentConstruction/TangentConstruction New Site/ChineseDrywall.html
@@ -1,6 +1,5 @@
 <!doctype html>
 
-
 <html>
 <div class="pageContent container">
   <header>
@@ -12,9 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <h1>
-      <!-- Tangent Construction Services - Chinese Drywall -->
-    </h1>
+    <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
@@ -22,7 +19,6 @@
       <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
-
         <div class="col-sm-2">
           <a href="TangentHome.html" target="_self"> Tangent Home </a>
         </div>
@@ -49,7 +45,6 @@
         <div class="col-sm-1"> </div>
       </div>
     </div>
-
   </header>
 
   <body>
@@ -59,14 +54,18 @@
     <div class="col-sm-12">
       <h4> What is Chinese Drywall? </h4>
       <p>
-        Chinese Drywall is about the smell rather than the look, it smells of rotten eggs.
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
     <div class="col-sm-12">
       <h4> How do you know if you have Chinese Drywall? </h4>
       <p>
-        Chinese Drywall is about the smell rather than the look, it smells of rotten eggs.
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
@@ -78,32 +77,56 @@
     <div class="col-sm-12">
       <h4> We handle the removal of bad drywall... </h4>
       <p>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
     <div class="col-sm-12">
       <h4> We handle the HEPA cleaning... </h4>
       <p>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
       </p>
     </div>
 
     <div class="col-sm-12">
       <h4> We handle the drywall replacement... </h4>
-      <h5> Hang </h5>
-      <h5> finish </h5>
-      <h5> texture </h5>
+      <h5>
+        Hang:
+      </h5>
       <p>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat.
+      </p>
+
+      <h5>
+        finish:
+      </h5>
+      <p>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat.
+      </p>
+
+      <h5>
+        texture:
+      </h5>
+      <p>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat.
       </p>
 
       <div>
-        <h4> And last we paint the walls. </h4>
+        <h4> And last we handle the painting. </h4>
         <p>
+          Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+          topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+          Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
         </p>
       </div>
-
-
     </div>
-
 
     <footer class="FooterInfo">
     </footer>
