--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediation.html
@@ -1,6 +1,5 @@
 <!doctype html>
 
-
 <html>
 <div class="pageContent container">
   <header>
@@ -8,17 +7,14 @@
     <link href="../css/TangentStyle.css" rel="stylesheet" type "text/css" />
     <link href="../css/bootstrap.css" rel="stylesheet" />
 
-    <!--  These two are for using tabs for navigation.  The first one enables it, second speeds it up? -->
+    <!--  These two are for using tabs for navigation.  The first one enables it, second speeds it up -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    <h1>
-      <!-- Tangent Construction Services - Stucco -->
-    </h1>
+    <br>
     <div id="nav" class="col-lg-12 center-block" style="text-align:center; align-content: center;">
       <div class="image"> <img src="../images/TangentLogo.png" alt="Tangent Construction Logo." style=height: px300 width: px300;> </div>
 
-      <!-- spacing -->
       <br>
       <div class="navbar">
         <div class="col-sm-1"> </div>
@@ -112,8 +108,6 @@
       </p>
     </div>
 
-    <!-- // we replace any decorations that were on the stucco. -->
-
     <div class='col-lg-12'>
       <hr>
       <h4 style="text-align: center"> We replace the decorations and then paint the cured stucco. </h4>
@@ -154,7 +148,6 @@
       <hr>
     </div>
 
-    <!-- This is for  commercial -->
     <div>
       <h2 style="text-align: center;  text-align:center">
         This is how a Tangent job looks.
@@ -162,16 +155,16 @@
     </div>
     <br>
 
-    <div id="carouselExampleIndicators" class="carousel slide offset-md-2" data-ride="carousel" style="width: 800px; text-align:center; align-content: center;">
+    <div id="carouselTangentJob" class="carousel slide offset-md-2" data-ride="carousel" style="width: 800px; text-align:center; align-content: center;">
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="1"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="2"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="3"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="4"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="5"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="6"></li>
+        <li data-target="#carouselTangentJob" data-slide-to="7"></li>
 
       </ol>
       <div class="carousel-inner">
@@ -202,10 +195,7 @@
         <div class="carousel-item">
           <img class="d-block w-100" src="../EmailedPictures/Pictures for Kyle/House 1/WireLathe.jpg" width="150" height="550" alt="Fifth slide">
           <div class="carousel-caption">
-            <!-- <h3>Wire lathe is added so that the stucco can adhere to the.</h3> -->
             <h3>Wire lath is added to the framing areas to give the stucco mud something to adhere to.</h3>
-            <!-- <h3>Vinyle beading is used to give the .</h3> -->
-            <!-- Control joints are used for segmenting stucco if it cracks. -->
           </div>
         </div>
 
@@ -230,14 +220,12 @@
         </div>
 
 
-
-
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselTangentJob" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselTangentJob" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -277,42 +265,10 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
-
-    <!-- This is for Residential  -->
-    <!-- <br>
-    <br>
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="text-align:center; align-content: center;">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="..." alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div> -->
+ -->
 
     <footer class="FooterInfo">
     </footer>
-
-
 
     <script src="../js/jquery-3.3.1.min.js"> </script>
     <script src="../js/popper.min.js"> </script>
